<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_about"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_yellow_blue"
>
    <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="32dp"
            card_view:cardElevation="3dp"
            card_view:cardBackgroundColor="@android:color/white"
    >

        <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="36dp"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/my_photo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"/>

            <TextView
                    android:id="@+id/my_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/str_my_name"/>

            <TextView
                    android:id="@+id/my_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/str_my_email"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textAlignment="center"
                    android:text="@string/copyright"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>